--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
         <script src="main.js"></script>
         <link rel="stylesheet" href="style.css">
         <title>Psi przewodnik</title>
+
+        <!--dodawanie pliku manifest-->
+        <link rel="manifest" href="manifest.json">
+        <meta name="theme-color" content="#35e4f6">
+
         <meta charset="UTF-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
