Add file Service Worker

--- a/index.html
+++ b/index.html
@@ -43,5 +43,6 @@
         <footer class="footer">
             Projekt WSB 2023
         </footer>
+        <script src="sw.js"></script>
     </body>
 </html>
