--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <header class="header">
             <h1>Najpopularniejsze rasy psów</h1>
         </header>
-        <main>
+        <main class="main">
             <div class="pies">
                 <img src="img/owczarek.jpg">
                 <h4>Owczarek niemiecki</h4>
