--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="pies">
                 <img src="img/york.jpg">
-                <h4>Yorkshire terrier (pot. Yrok)</h4>
+                <h4>Yorkshire terrier (pot. York)</h4>
                 <div>Rasa psa należąca do grupy terierów, zaklasyfikowana do sekcji terierów miniaturowych. Według klasyfikacji FCI nie podlega próbom pracy. Zgodnie z klasyfikacją amerykańską, należy do grupy psów ozdobnych i do towarzystwa. Jest typu lisowatego.</div>
             </div>
 
